--- a/index.html
+++ b/index.html
@@ -370,8 +370,8 @@
                            <li>Healing Center, oo W Street name, <br>
                               Loram ipusum 
                            </li>
-                           <li>(+71) 8522369417 <br>(+71) 8522369417</li>
-                           <li> <a href="Javascript:void(0)"> demo@gmail.com</a></li>
+                           <!-- <li>(+71) 8522369417 <br>(+71) 8522369417</li>
+                           <li> <a href="Javascript:void(0)"> demo@gmail.com</a></li> -->
                         </ul>
                      </div>
                   </div>
